--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-  <string name="app_name">Nearme</string>
-  <string name="title_activity_main">Nearme</string>
-  <string name="package_name">com.quanlabs.nearme5</string>
-  <string name="custom_url_scheme">com.quanlabs.nearme5</string>
-  <string name="facebook_app_id">310014526316066</string>
-  <string name="facebook_client_token">159a6bf0ee3f7df23a7f75d2ec32624e</string>
+  <string name="app_name">Gungry</string>
+  <string name="title_activity_main">Gungry</string>
+  <string name="package_name">com.gungry.app</string>
+  <string name="custom_url_scheme">com.gungry.app</string>
+  <string name="facebook_app_id">2155834464464832</string>
+  <string name="facebook_client_token">763ab6254c8694cd921f79e07c294f16</string>
 </resources>
