--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -120,7 +120,7 @@
   "FORGOT_PASSWORD_HELP": "",
   "FORGOT_PASSWORD_SUCCESS": "Te hemos enviado un correo con instrucciones para establecer tu contraseña, si la cuenta existe con el correo introducido.",
   "EMPTY_DATA": "No se encontraron resultados.",
-  "FEATURED": "Destacados",
+  "FEATURED": "Promos a domicilio",
   "VIEW_ALL": "Ver todo",
   "MORE_PLACES": "Más lugares",
   "VIEW_PLACE": "Ver lugar",
@@ -168,7 +168,7 @@
   "CREATEDAT_DESC": "Más recientes",
   "REVIEWS_DISABLED": "Reseñas deshabilitadas",
   "PLACE_NAME": "Nombre del lugar",
-  "FEATURED_PLACE": "Destacado",
+  "FEATURED_PLACE": "A domicilio",
   "CHOOSE_PACKAGE": "Selecciona un paquete",
   "PAY_NOW": "Pagar ahora",
   "LEFT": "Restantes",
