--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -34,7 +34,7 @@
   "START": "Iniciar",
   "EXPLORE_MORE": "Conocer más",
   "NEARBY": "Cerca de mí",
-  "NEW": "Nuevo",
+  "NEW": "Promos nuevas",
   "CLOSE": "Cerrar",
   "EMAIL": "Correo",
   "USERNAME": "Usuario",
@@ -100,11 +100,11 @@
   "COMMENTS_AND_REACTIONS": "Comentarios y reacciones",
   "INFO": "Información",
   "MY_PLACES": "Mis lugares",
-  "LIKES": "Likes",
+  "LIKES": "Favoritos",
   "COMMENTS": "Comentarios",
   "LIKED": "Me gusta",
   "PENDING": "Pendiente",
-  "APPROVED": "Aprobado",
+  "APPROVED": "Publicado",
   "REJECTED": "Rechazado",
   "EXPIRED": "Expirado",
   "GOOD_JOB": "Bien hecho!",
@@ -124,7 +124,7 @@
   "VIEW_ALL": "Ver todo",
   "MORE_PLACES": "Más lugares",
   "VIEW_PLACE": "Ver lugar",
-  "POSTS": "Noticias",
+  "POSTS": "Eventos",
   "HOME": "Inicio",
   "EMAIL_VALIDATION_HELP": "Opcional. Para recuperación de contraseña.",
   "INVALID_LOCATION": "Por favor establece una posición GPS en el mapa.",
@@ -155,7 +155,7 @@
   "INSTAGRAM": "Instagram",
   "YOUTUBE": "Youtube",
   "EMPTY_SLIDES": "Datos vacíos",
-  "REPORT_LISTING": "Reportar listado",
+  "REPORT_LISTING": "Reportar publicación",
   "REPORT_REASON": "Razón",
   "DISMISS": "Cerrar",
   "SENT": "Enviado",
@@ -176,7 +176,7 @@
   "PACKAGE_PURCHASE_LIMIT_REACHED": "Límite alcanzado",
   "WAITING_PAYMENT": "Esperando pago",
   "PROMOTE": "Promocionar",
-  "PROMOTE_LISTING": "Promocionar listado",
+  "PROMOTE_LISTING": "Promocionar publicación",
   "NEW_PACKAGE": "Nuevo paquete",
   "PURCHASED_PACKAGES": "Sus paquetes comprados",
   "FREE": "Gratis",
@@ -197,7 +197,7 @@
   "NEXT": "Siguiente",
   "CONTINUE": "Continuar",
   "GUEST": "Invitado",
-  "CONFIRM_DELETE_LISTING": "¿Estás seguro que deseas eliminar este listado?",
+  "CONFIRM_DELETE_LISTING": "¿Estás seguro que deseas eliminar esta publicación?",
   "DELETED": "Eliminado",
   "DARK_MODE": "Modo oscuro",
   "AGREE_TERMS": "Acepto los",
@@ -209,7 +209,7 @@
   "COPYRIGHT": "Todos los derechos reservados.",
   "PRICE_RANGE": "Rango de precios",
   "UNSPECIFIED": "Sin especificar",
-  "WHATS_APP_SHARE_TEXT": "Hola, he encontrado este listado {{ placeUrl }} en {{ appName }}. Por favor, envíenme más información y contáctenme por WhatsApp.",
+  "WHATS_APP_SHARE_TEXT": "Hola, he encontrado esta publicación {{ placeUrl }} en {{ appName }}. Por favor, envíenme más información y contáctenme por WhatsApp.",
   "WHATS_APP_PLACEHOLDER": "Phone number with country code",
   "WHATS_APP_HELPER": "Código de país + número de teléfono. No incluyas los ceros, paréntesis ni guiones cuando añadas el número de teléfono en este formato."
 }
