--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,6 +1,6 @@
 {
-  "APP_NAME": "Nearme",
-  "APP_DESCRIPTION": "Ionic v6 Starter / Template for location based apps",
+  "APP_NAME": "Gungry",
+  "APP_DESCRIPTION": "Descubre miles de promos a tu alrededor",
   "CATEGORIES": "Categorías",
   "MAP": "Mapa",
   "MY_FAVORITES": "Mis Favoritos",
@@ -99,7 +99,7 @@
   "VIEW_ALL_REVIEWS": "Ver todas las reseñas",
   "COMMENTS_AND_REACTIONS": "Comentarios y reacciones",
   "INFO": "Información",
-  "MY_PLACES": "Mis lugares",
+  "MY_PLACES": "Mis publicaciones",
   "LIKES": "Favoritos",
   "COMMENTS": "Comentarios",
   "LIKED": "Me gusta",
@@ -120,7 +120,7 @@
   "FORGOT_PASSWORD_HELP": "",
   "FORGOT_PASSWORD_SUCCESS": "Te hemos enviado un correo con instrucciones para establecer tu contraseña, si la cuenta existe con el correo introducido.",
   "EMPTY_DATA": "No se encontraron resultados.",
-  "FEATURED": "Promos a domicilio",
+  "FEATURED": "Exclusivas",
   "VIEW_ALL": "Ver todo",
   "MORE_PLACES": "Más lugares",
   "VIEW_PLACE": "Ver lugar",
@@ -150,7 +150,7 @@
   "SEE_THE_RESULTS": "Ver resultados",
   "EMPTY_POSTS": "No se encontraron entradas.",
   "HELP": "Centro de ayuda",
-  "ABOUT_US": "Acerca de",
+  "ABOUT_US": "¿Que es Gungry?",
   "CONTACT_US": "Contacto",
   "INSTAGRAM": "Instagram",
   "YOUTUBE": "Youtube",
