--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,6 +1,6 @@
 {
-  "APP_NAME": "Nearme",
-  "APP_DESCRIPTION": "Ionic v6 Starter / Template for location based apps",
+  "APP_NAME": "GUNGRY",
+  "APP_DESCRIPTION": "Find the best deals nearby",
   "CATEGORIES": "Categories",
   "MAP": "Map",
   "MY_FAVORITES": "My Favorites",
