--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -1,6 +1,6 @@
 {
-  "APP_NAME": "Nearme",
-  "APP_DESCRIPTION": "Ionic v6 Starter / Template for location based apps",
+  "APP_NAME": "Gungry",
+  "APP_DESCRIPTION": "Find the best deals neaby",
   "CATEGORIES": "الاقسام",
   "MAP": "خريطة",
   "MY_FAVORITES": "مفضلتي",
