--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -148,7 +148,7 @@
   "RATING": "Calificación",
   "DISTANCE": "Distancia",
   "SEE_THE_RESULTS": "Ver resultados",
-  "EMPTY_POSTS": "No se encontraron entradas.",
+  "EMPTY_POSTS": "No se encontraron eventos cercanos.",
   "HELP": "Centro de ayuda",
   "ABOUT_US": "¿Que es Gungry?",
   "CONTACT_US": "Contacto",
