--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -141,7 +141,7 @@
   "SHARE_THIS": "Comparte esto",
   "REVIEW": "Reseña",
   "NOTIFICATION": "Notificación",
-  "EMPTY_USER_PLACES": "Añade un lugar",
+  "EMPTY_USER_PLACES": "Añade una promo",
   "MY_REVIEWS": "Mis reseñas",
   "PUSH_NOTIFICATIONS": "Notificaciones Push",
   "REFINE": "Filtrar",
