--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -16,7 +16,7 @@
   "OPEN_WALKTHROUGH": "Abrir guía de inicio",
   "PULL_TO_REFRESH": "Suelta para actualizar",
   "REFRESHING": "Refrescando...",
-  "ADD_PLACE": "Añadir lugar",
+  "ADD_PLACE": "Añadir promo",
   "SUBMIT": "Enviar",
   "NAME": "Nombre",
   "CATEGORY": "Categoría",
