--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -27,7 +27,7 @@
   "UPLOAD_PICTURE": "Añadir Foto",
   "SEARCH": "Buscar",
   "LIKE": "Me gusta",
-  "RATE": "Reseñar",
+  "RATE": "Calificar",
   "SHARE": "Compartir",
   "GET_DIRECTIONS": "Obtener direcciones",
   "REVIEWS": "Reseñas",
