--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -14,7 +14,7 @@
   "SPANISH": "Español",
   "MORE": "Más",
   "OPEN_WALKTHROUGH": "Abrir guía de inicio",
-  "PULL_TO_REFRESH": "Suelta para actualizar",
+  "PULL_TO_REFRESH": "Desliza para actualizar",
   "REFRESHING": "Refrescando...",
   "ADD_PLACE": "Añadir promo",
   "SUBMIT": "Enviar",
