--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -186,10 +186,10 @@
   "TODAY": "Hoy",
   "THIS_WEEK": "Esta semana",
   "THIS_MONTH": "Este mes",
-  "ALL_TIME": "Todo",
+  "ALL_TIME": "Histórico",
   "STATISTICS": "Estadísticas",
   "INTERACTIONS": "Interacciones",
-  "INTERACTIONS_TEXT": "Número total de impresiones",
+  "INTERACTIONS_TEXT": "Número de clics",
   "PENDING_APPROVAL": "Pendiente de aprobación",
   "EDIT_PLACE": "Editar lugar",
   "ENABLE_LOCATION": "Habilitar ubicación",
