--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -168,7 +168,7 @@
   "CREATEDAT_DESC": "Más recientes",
   "REVIEWS_DISABLED": "Reseñas deshabilitadas",
   "PLACE_NAME": "Nombre del lugar",
-  "FEATURED_PLACE": "Exclusiva",
+  "FEATURED_PLACE": "Recomendada",
   "CHOOSE_PACKAGE": "Selecciona un paquete",
   "PAY_NOW": "Pagar ahora",
   "LEFT": "Restantes",
