--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -9,7 +9,7 @@
   "MAP_STYLE": "Estilo de mapa",
   "SATELLITE": "Satelite",
   "NORMAL": "Normal",
-  "LANGUAGE": "Lenguaje",
+  "LANGUAGE": "Idioma",
   "ENGLISH": "Inglés",
   "SPANISH": "Español",
   "MORE": "Más",
@@ -99,8 +99,8 @@
   "VIEW_ALL_REVIEWS": "Ver todas las reseñas",
   "COMMENTS_AND_REACTIONS": "Comentarios y reacciones",
   "INFO": "Información",
-  "MY_PLACES": "Mis publicaciones",
-  "LIKES": "Favoritos",
+  "MY_PLACES": "Mis ofertas",
+  "LIKES": "Mis promos favoritas",
   "COMMENTS": "Comentarios",
   "LIKED": "Me gusta",
   "PENDING": "Pendiente",
