--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -100,7 +100,7 @@
   "COMMENTS_AND_REACTIONS": "Comentarios y reacciones",
   "INFO": "Información",
   "MY_PLACES": "Mis ofertas",
-  "LIKES": "Mis promos favoritas",
+  "LIKES": "Favoritos",
   "COMMENTS": "Comentarios",
   "LIKED": "Me gusta",
   "PENDING": "Pendiente",
