--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -99,7 +99,7 @@
   "VIEW_ALL_REVIEWS": "Ver todas las reseñas",
   "COMMENTS_AND_REACTIONS": "Comentarios y reacciones",
   "INFO": "Información",
-  "MY_PLACES": "Mis ofertas",
+  "MY_PLACES": "Mis publicaciones",
   "LIKES": "Favoritos",
   "COMMENTS": "Comentarios",
   "LIKED": "Me gusta",
@@ -120,8 +120,8 @@
   "FORGOT_PASSWORD_HELP": "",
   "FORGOT_PASSWORD_SUCCESS": "Te hemos enviado un correo con instrucciones para establecer tu contraseña, si la cuenta existe con el correo introducido.",
   "EMPTY_DATA": "No se encontraron resultados.",
-  "FEATURED": "Recomendadas",
-  "VIEW_ALL": "Ver todo",
+  "FEATURED": "Recomendado",
+  "VIEW_ALL": "Ver más",
   "MORE_PLACES": "Más lugares",
   "VIEW_PLACE": "Ver lugar",
   "POSTS": "Eventos",
@@ -149,7 +149,7 @@
   "DISTANCE": "Distancia",
   "SEE_THE_RESULTS": "Ver resultados",
   "EMPTY_POSTS": "No se encontraron eventos cercanos.",
-  "HELP": "Centro de ayuda",
+  "HELP": "Otros",
   "ABOUT_US": "¿Que es Gungry?",
   "CONTACT_US": "Contacto",
   "INSTAGRAM": "Instagram",
